--- a/public.html
+++ b/public.html
@@ -40,14 +40,14 @@
 									
 									<hr class="b" />
 									<h2>LeetCode Question & Solution</h2>
-									<li>In this I will introduce about the data structure and how I approach each questions. If you like please click <a href="/LeetCode/leetCode.html">link</a></li>
+									<li>In this I will introduce about the data structure and how I approach each questions. If you like please click <a href="leetcodeHome.html">link</a></li>
 									<span class="image object">
 										<img src="images/leetcode.jpg" alt="" />
 									</span>
 									
 									<hr class="b" />
 									<h2>Home Designs & Management</h2>
-									<li>In this section I will introduce the product I used which I feel is best with some comparison. If you like this kind of thing please go ahead click the <a href="/HomeDesignsManagement/homeDesign.html">link</a> </li>
+									<li>In this section I will introduce the product I used which I feel is best with some comparison. If you like this kind of thing please go ahead click the <a href="homeDesignHome.html">link</a> </li>
 									<span class="image object">
 										<img src="images/HManagemnt.jpg" alt="" />
 									</span>
