--- a/leetcodeHome.html
+++ b/leetcodeHome.html
@@ -33,12 +33,30 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Welcome to watch on my design, please feel free to leave comment below</h1>
+										<h2>LeetCode and DataStructure</h2>
 									</header>
-
-									<!--<span class="image main"><img src="images/public.jpg" alt="" /></span>-->
+									<table border="0">
+                   							 <tr><td>The fundamental of the coding questions are related with DataStructure and Algorithms</td></tr>
+									 </table>
+									<li> Arrays</li>
+									<li> Binary Search Tree</li>
+									<li> Binary Tree</li>
+									<li> Dynamic Programming</li>
+									<li> Famous Algorithm: Kadane, Dijkstra, Topological Sort, KMP, A* </li> 
+									<li> Graph</li>
+									<li> Greedy Algorithm</li>
+									<li> Heaps</li>
+									<li> LinkedList</li>
+									<li> Recursion</li>
+									<li> Searching</li>
+									<li> Sorting</li>
+									<li> Stack</li>
+									<li> Strings</li>
+									<li> Tries</li>
 									
-									<li>To be Continue</li>
+									<!--<span class="image main"><img src="images/public.jpg" alt="" /></span>-->
+									<hr class="b" />
+									<li>Day 1: LeetCode </li>
                                     
 								</section>
 
