--- a/working_experience.html
+++ b/working_experience.html
@@ -45,6 +45,32 @@ ul.b {
 									<!--<span class="image main"><img src="images/public.jpg" alt="" /></span>-->
 
 									<hr class="b" />
+									<h2>Teladoc Health -- Sofware Engineer II</h2>
+									<table border="0">
+                   							 <tr><td>Jan.2022 - Jan.2023</td><td> Advisor:Kunal Sachdeva</td></tr>
+               								</table>
+									<li> </li>
+									<li> Created a local layer to store all the information for clients’ BloodPressure(BP) and Blood Glucose(BG)</li>
+									<li> Designed and create a delete API to delete all the client information based on GDPR to keep information safety</li>
+									<li> Migrated microservices from AWS to Azure and update endpoint call for client protal</li>
+									<li> Implemented Fast Healthcare Interoperability Resources(FHIR) API for data management in the cloud</li>
+									<li> Developed Personally Identifiable Information(PII) filter to hash informations from microservices’ database</li>
+									<li> Documented all PII from Splunk history for microservices and find information that miss hashed</li>
+									<li> Lead over 10+ engineer for the PII work and did better than our customer expect</li>
+
+									<hr class="b" />
+									<h2>Amazon Inc.</h2>
+									<table border="0">
+									 <tr><td>May 2021 - Nov.2021</td><td> Advisor: Brent Miles</td></tr>
+               								</table>
+									<!--
+									<li> Designed and developed a feature in workmail group for amazon customers and internal on-call which will save 75% of time by creating, editing, and transferring ownership for a group..</li>
+									<li> Designed and implemented a feature for the Distribution List Group (DL Group) management tool to support editing, ownership transferring, and information collecting by using AJAX under the Spring MVC framework..</li>
+									-->
+									<li> Designed and developed a feature in workmail group for amazon customers and internal on-call which will save 75% of time by creating, editing, and transferring ownership for a group..</li>
+									<li> Designed and implemented a feature for the Distribution List Group (DL Group) management tool to support editing, ownership transferring, and information collecting by using AJAX under the Spring MVC framework..</li>
+
+									<hr class="b" />
 									<h2>Western Digital(Intern)</h2>
 									<table border="0">
 									 <tr><td>June 2018 - Sep.2018</td><td> Advisor: Jerry Lo</td></tr>
